--- a/src/components/ui/index.module.css
+++ b/src/components/ui/index.module.css
@@ -39,6 +39,10 @@
   color: white;
   cursor: pointer;
   font-family: primaryBold;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button_secondary {
@@ -95,6 +99,18 @@
 
 .button:hover {
   box-shadow: inset 0 0 1.5rem 0 rgba(44, 44, 44, 0.5);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button:active,
+.button:focus {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* 에러 */
